OpenDNSSEC 1.3.18

* OPENDNSSEC-620: conf.xml: New options: <PidFile> for both enforcer
  and signer, and <SocketFile> for the signer.
* Build: Fixed various OpenBSD compatibility issues found by Patrik Lundin
  <patrik.lundin.swe () gmail.com>.
* New tool: ods-getconf: to retrieve a configuration value from conf.xml
  given an expression.

Bugfixes:
* OPENDNSSEC-624: memory leak when signer failed, solved it by add
  ldns_rr_free(signature) in libhsm.c
* simple-dnskey-mailer.sh: Fix syntax error. (by Patrik Lundin
  https://github.com/eest)
* libhsm: Fixed a few other memory leaks.


OpenDNSSEC 1.3.17 - 2014-05-06

* SUPPORT-114: libhsm: Optimize storage in HSM by deleting the public 
  key directly if SkipPublicKey is used [OPENDNSSEC-575].
* Signer Engine: log serial of signed zone in STATS line.
* OPENDNSSEC-550: Signer Engine: Put NSEC3 records on empty non-terminals
  derived from unsigned delegations (be compatible with servers that are
  incompatible with RFC 5155 errata 3441).
* OPENDNSSEC-569: Build compatibility with SoftHSMv2.
* Signer Engine: Examine unsigned zone checks for SOA RRset existence.
* OPENDNSSEC-591: ods-ksmutil:Extend 'key list' command with options to filter
  on key type and state. This allows keys in the GENERATE and DEAD state to be
  output.

Bugfixes:
* SUPPORT-116: ods-ksmutil key import. Date validation fails on certain 
  dates [OPENDNSSEC-589].
* OPENDNSSEC-481: libhsm: Fix an off-by-one length check error.
* OPENDNSSEC-482: libhsm: Improved cleanup for C_FindObjects.
* OPENDNSSEC-515: Signer Engine: Don't replace tabs in RRs with whitespace.
* OPENDNSSEC-538: libhsm: Possible memory corruption in hsm_get_slot_id.
* Signer Engine: Fix a race condition when stopping daemon.
* OPENDNSSEC-586: enforcer & ods-ksmutil: Improve logging on key creation
  and alloctaion.
* OPENDNSSEC-588: ods-ksmutil: Exported value of <Parent><SOA><TTL> in 
  'policy export' output could be wrong on MySQL.


OpenDNSSEC 1.3.16 - 2013-12-04
