@@ -970,6 +970,32 @@ cmd_addzone ()
         return(1);
     }
 
+	/* check that zonelist.xml.backup is writable */
+	StrAppend(&backup_filename, zonelist_filename);
+	StrAppend(&backup_filename, ".backup");
+    if (xml_flag == 1) {
+		if (access(backup_filename, F_OK) == 0){
+			if (access(backup_filename, W_OK) != 0){
+				printf("ERROR: The backup file %s can not be written.\n",backup_filename);
+				StrFree(zonelist_filename);
+				StrFree(sig_conf_name);
+				StrFree(input_name);
+				StrFree(output_name);
+				StrFree(backup_filename);
+				return(1);
+			}
+		}else{
+			if (access(OPENDNSSEC_CONFIG_DIR, W_OK) != 0){
+				printf("ERROR: The backup file %s can not be written.\n",backup_filename);
+				StrFree(zonelist_filename);
+				StrFree(sig_conf_name);
+				StrFree(input_name);
+				StrFree(output_name);
+				StrFree(backup_filename);
+				return(1);
+			}
+		}
+	}
     /*
      * Push this new zonelist into the database
      */
@@ -983,6 +1009,7 @@ cmd_addzone ()
         StrFree(sig_conf_name);
         StrFree(input_name);
         StrFree(output_name);
+        StrFree(backup_filename);
         return(1);
     } 
 
@@ -996,6 +1023,7 @@ cmd_addzone ()
         StrFree(sig_conf_name);
         StrFree(input_name);
         StrFree(output_name);
+        StrFree(backup_filename);
         return(1);
     }
     status = KsmImportZone(o_zone, policy_id, 1, &new_zone, sig_conf_name, input_name, output_name);
@@ -1012,6 +1040,7 @@ cmd_addzone ()
         StrFree(sig_conf_name);
         StrFree(input_name);
         StrFree(output_name);
+        StrFree(backup_filename);
         return(1);
     }
 
@@ -1025,6 +1054,7 @@ cmd_addzone ()
         StrFree(sig_conf_name);
         StrFree(input_name);
         StrFree(output_name);
+        StrFree(backup_filename);
         return(1);
     }
     status = KsmParameter(result, &data);
@@ -1035,6 +1065,7 @@ cmd_addzone ()
         StrFree(sig_conf_name);
         StrFree(input_name);
         StrFree(output_name);
+        StrFree(backup_filename);
         return(1);
     }
     KsmParameterEnd(result);
@@ -1052,6 +1083,7 @@ cmd_addzone ()
                 StrFree(sig_conf_name);
                 StrFree(input_name);
                 StrFree(output_name);
+                StrFree(backup_filename);
                 return(1);
             }
         }
@@ -1073,17 +1105,18 @@ cmd_addzone ()
         StrFree(output_name);
 
         if (doc == NULL) {
+            printf("Error: Couldn't add our new node in memory\n");
             StrFree(zonelist_filename);
+            StrFree(backup_filename);
             return(1);
         }
 
         /* Backup the current zonelist */
-        StrAppend(&backup_filename, zonelist_filename);
-        StrAppend(&backup_filename, ".backup");
         status = backup_file(zonelist_filename, backup_filename);
-        StrFree(backup_filename);
         if (status != 0) {
+            printf("Error: Backup %s FAILED, please backup %s manually and run \"ods-ksmutil zonelist export\" to update zonelist.xml\n", backup_filename, backup_filename);
             StrFree(zonelist_filename);
+            StrFree(backup_filename);
             return(status);
         }
 
@@ -1093,7 +1126,8 @@ cmd_addzone ()
         xmlFreeDoc(doc);
 
         if (status == -1) {
-            printf("couldn't save zonelist\n");
+            printf("Error: couldn't save zonelist, please run \"ods-ksmutil zonelist export\" to update zonelist.xml\n");
+            StrFree(backup_filename);
             return(1);
         }
     }
@@ -1107,6 +1141,10 @@ cmd_addzone ()
         printf("Imported zone: %s\n", o_zone);
     }
 
+    StrFree(backup_filename);
+    StrFree(sig_conf_name);
+    StrFree(input_name);
+    StrFree(output_name);
 
     return 0;
 }
